# diplom_backend

./: .gitignore  README.md  main.py  pyproject.toml  test_connection.py
cobalt-service/: docker-compose.yml
modules/: __init__.py
modules/asr/: config.py  service.py  tasks.py  utils.py
modules/auth/: config.py  dependencies.py  events.py  models.py  router.py  schemas.py  service.py
modules/llm/: config.py  models.py  router.py  schemas.py  service.py  structured.py  tasks.py
modules/llm/clients/: __init__.py  base.py  gigachat.py
modules/media/: config.py  models.py  router.py  schemas.py  service.py  storage.py  tasks.py
modules/shared/: celery.py  database.py  event_bus.py  processing.py
scripts/: init_db.py  test_gigachat_auth.py  test_llm.py
test_cobalt/: server.py
